# sp_vision_25

./: .gitignore  AGENTS.md  CMakeLists.txt  COLCON_IGNORE  docker-compose.dev.yml  init.sh  openvino_2024  readme.md
.agent/: DEVELOPMENT.md  KNOWLEDGE.md  OMNIPERCEPTION_V1.md  TODO.md  TROUBLESHOOTING.md
assets/: 0526.xml  big.avi  demo.avi  sentry_pose_v001.xml
build_tmp_verify/: CMakeCache.txt
calibration/: calibrate_camera.cpp  calibrate_robotworld_handeye.cpp  capture.cpp
cmake/: DashboardDeps.cmake
configs/: calibration.yaml  demo.yaml  example.yaml  sentry_pose.yaml  standard3.yaml  standard3_trt.yaml
docker/dev/: Dockerfile
docs/: dashboard.md  dashboard_build_notes.md  dashboard_changelog.md  dashboard_frontend_split.md  dashboard_mqtt_broker.md  dashboard_mqtt_protocol.md  dashboard_runtime_container.md
io/: CMakeLists.txt  cboard.cpp  packet_typedef.hpp
io/dm_imu/: dm_imu.cpp
io/gimbal/: gimbal.cpp  gimbal.hpp
io/hikrobot/: hikrobot.cpp  hikrobot.hpp
io/mindvision/: mindvision.cpp
io/ros2/: publishrefereedata.cpp  publishrefereedata.hpp  ros2.cpp  ros2.hpp  subscribenavcmd.cpp  subscribenavcmd.hpp
io/usbcamera/: usbcamera.cpp  usbcamera.hpp
scripts/: hardwareless_dashboard_build.sh  hardwareless_dashboard_run.sh
src/: auto_aim_debug_dashboard.cpp  auto_aim_debug_dashboard.hpp  auto_aim_debug_mpc.cpp  auto_aim_debug_mpc_ekfpnp.cpp  auto_aim_debug_mpc_trt.cpp  auto_aim_delay_calibration.cpp  auto_aim_delay_tuner.cpp  auto_buff_debug.cpp  auto_buff_debug_mpc.cpp  auto_buff_fyt_debug_mpc.cpp  curve_generator.cpp  mt_auto_aim_debug.cpp  mt_standard.cpp  omni_perception_delay_tuner.cpp  sentry.cpp  sentry_bp.cpp  sentry_debug.cpp  sentry_multithread.cpp  sentry_omni_perception_debug_mpc.cpp  standard.cpp  standard_fyt_mpc.cpp  standard_mpc.cpp  uav.cpp  uav_debug.cpp
tasks/auto_aim/: CMakeLists.txt  aimer.cpp  aimer.hpp  armor.cpp  armor.hpp  detector.cpp  detector.hpp  solver.cpp  solver.hpp  target.cpp  target.hpp  tracker.cpp  tracker.hpp  yolo.cpp
tasks/auto_aim/multithread/: mt_detector.cpp  mt_detector.hpp
tasks/auto_aim/planner/: planner.cpp  planner.hpp
tasks/auto_aim/planner/tinympc/: admm.cpp
tasks/auto_aim/yolos/: yolo_sentry_pose.cpp  yolo_sentry_pose.hpp  yolov5_trt.cpp  yolov5_trt.hpp  yolov8.cpp
tasks/auto_aim_ekfpnp/: CMakeLists.txt  planner.cpp  target.cpp  target.hpp  tracker.cpp  tracker.hpp
tasks/auto_buff/: buff_aimer.cpp
tasks/auto_buff_fyt/: CMakeLists.txt  buff_aimer.hpp  buff_detector.cpp  buff_detector.hpp  buff_solver.cpp  buff_solver.hpp  buff_target.hpp  buff_type.hpp  rune_detector.cpp  rune_detector.hpp  types.hpp
tasks/omniperception/: perceptron.cpp
tests/: auto_aim_dashboard_hardwareless_test.cpp  auto_aim_test.cpp  auto_buff_test.cpp  buff_detect_fyt_test.cpp  buff_detect_test.cpp  camera_thread_test.cpp  dashboard_params_test.cpp  detector_video_test.cpp  fire_test.cpp  gimbal_response_test.cpp  gimbal_test.cpp  minimum_vision_system.cpp  mqtt_bridge_smoke.cpp  outpost_test.cpp  planner_test.cpp  planner_test_offline.cpp  publish_test.cpp  subscribe_test.cpp  topic_loop_test.cpp  usbcamera_detect_test.cpp  yolov5_trt_test.cpp
tools/: CMakeLists.txt  check_sum.cpp  check_sum.hpp  dashboard_cli.cpp  dashboard_cli.hpp  dashboard_config.cpp  dashboard_config.hpp  dashboard_mqtt_contract.hpp  dashboard_params.cpp  dashboard_params.hpp  extended_kalman_filter.cpp  math_tools.cpp  mqtt_bridge.cpp  mqtt_bridge.hpp  plotter.cpp  plotter.hpp  recorder.cpp  recorder.hpp  thread_pool.hpp  thread_safe_queue.hpp
